// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EditSkillsSearch displays error message when skills fetching fails 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    Error loading skills: 
    Error
  </div>
</div>
`;

exports[`EditSkillsSearch displays loading overlay when skills are being fetched 1`] = `
<div>
  <div>
    Loading skills...
  </div>
</div>
`;

exports[`EditSkillsSearch filters and displays skills based on search term 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-dzmwfx-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_3_"
        id="_r_3_-label"
      >
        Search Skills to Add
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_3_"
          name="searchSkills"
          placeholder="Type at least 3 characters to search"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Search Skills to Add
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditSkillsSearch filters and displays skills based on search term 2`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-dzmwfx-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="_r_3_"
        id="_r_3_-label"
      >
        Search Skills to Add
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_3_"
          name="searchSkills"
          placeholder="Type at least 3 characters to search"
          type="text"
          value="Java"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-ex8a5f-MuiNotchedOutlined-root"
          >
            <span>
              Search Skills to Add
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
    >
      <ul
        class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-gys9a0-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="icon-js"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              JavaScript
            </span>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
        />
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1pl8jsc-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="mdi:plus"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              Add a new skill: Java
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`EditSkillsSearch filters and displays skills based on search term 3`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-dzmwfx-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="_r_3_"
        id="_r_3_-label"
      >
        Search Skills to Add
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_3_"
          name="searchSkills"
          placeholder="Type at least 3 characters to search"
          type="text"
          value="Java"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-ex8a5f-MuiNotchedOutlined-root"
          >
            <span>
              Search Skills to Add
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
    >
      <ul
        class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-gys9a0-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="icon-js"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              JavaScript
            </span>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
        />
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1pl8jsc-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="mdi:plus"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              Add a new skill: Java
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`EditSkillsSearch opens dialog when a skill is selected 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-dzmwfx-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_6_"
        id="_r_6_-label"
      >
        Search Skills to Add
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_6_"
          name="searchSkills"
          placeholder="Type at least 3 characters to search"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Search Skills to Add
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditSkillsSearch opens dialog when a skill is selected 2`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-dzmwfx-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="_r_6_"
        id="_r_6_-label"
      >
        Search Skills to Add
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_6_"
          name="searchSkills"
          placeholder="Type at least 3 characters to search"
          type="text"
          value="Java"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-ex8a5f-MuiNotchedOutlined-root"
          >
            <span>
              Search Skills to Add
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
    >
      <ul
        class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-gys9a0-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="icon-js"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              JavaScript
            </span>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
        />
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1pl8jsc-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="mdi:plus"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              Add a new skill: Java
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`EditSkillsSearch opens dialog when a skill is selected 3`] = `
<div
  aria-hidden="true"
>
  <div
    class="MuiBox-root css-0"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-dzmwfx-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="_r_6_"
        id="_r_6_-label"
      >
        Search Skills to Add
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_6_"
          name="searchSkills"
          placeholder="Type at least 3 characters to search"
          type="text"
          value="Java"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-ex8a5f-MuiNotchedOutlined-root"
          >
            <span>
              Search Skills to Add
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
    >
      <ul
        class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-gys9a0-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="icon-js"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              JavaScript
            </span>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
        />
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1pl8jsc-MuiListItem-root"
        >
          <div
            class="MuiListItemIcon-root css-cokf1l-MuiListItemIcon-root"
          >
            <span
              data-icon="mdi:plus"
              data-testid="icon"
              height="24"
              width="24"
            />
          </div>
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
            >
              Add a new skill: Java
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`EditSkillsSearch renders correctly 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-dzmwfx-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_0_"
        id="_r_0_-label"
      >
        Search Skills to Add
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_0_"
          name="searchSkills"
          placeholder="Type at least 3 characters to search"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Search Skills to Add
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
